--- a/fitness-game/package.json
+++ b/fitness-game/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "bootstrap": "^5.1.3",
     "deck.gl": "^8.6.8",
     "dotenv": "^16.0.0",
     "fs": "^0.0.1-security",
@@ -15,6 +16,7 @@
     "os": "^0.1.2",
     "path": "^0.12.7",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.3",
     "react-dom": "^17.0.2",
     "react-map-gl": "^7.0.7",
     "react-redux": "^7.2.6",
